# mocnpub

./: .clangd  .gitignore  CLAUDE.md  CUDA_CONTEXT_API.md  Cargo.toml  README.md  TASKLIST.md  build.rs  lefthook.yml  mandelbrot.ptx
.github/workflows/: ci.yml
benches/: benchmark.rs
cuda/: secp256k1.cu  secp256k1.ptx
docs/: CODE_REVIEW.md  LEARNING.md  OPTIMIZATION.md  TASKLIST.md
examples/: mandelbrot.rs
fuzz/: Cargo.toml
scripts/: benchmark.ps1
src/: gpu.rs  lib.rs  main.rs
